# otel-instrumentation-redis

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: release.yml  security.yml
src/: client.rs  lib.rs
src/aio/: mod.rs
src/common/: mod.rs
src/sync/: mod.rs
